force-app/main/default/objects/SBQQ__LookupData__c/fields/SBQQ__Category__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Category__c</fullName>
        <label>Category</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>