force-app/main/default/objects/SBQQ__LookupData__c/fields/SBQQ__Message__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Message__c</fullName>
        <label>Message</label>
        <type>TextArea</type>
    </CustomField>