force-app/main/default/objects/SBQQ__LookupData__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use with Product Selection Rules, represents the Product to which the Product Action applies.</description>
        <inlineHelpText>For use with Product Selection Rules, represents the Product to which the Product Action applies.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Lookup Data</relationshipLabel>
        <relationshipName>LookupData</relationshipName>
        <type>Lookup</type>
    </CustomField>