force-app/main/default/objects/SBQQ__LookupData__c/fields/SBQQ__Required__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Product Selection Rules, indicates that the action is required.</description>
        <inlineHelpText>For Product Selection Rules, indicates that the action is required.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </CustomField>