force-app/main/default/objects/SBQQ__LookupData__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>For use with Product Selection Rules, specifies the type of action to be performed on the Product.</description>
        <inlineHelpText>For use with Product Selection Rules, specifies the type of action to be performed on the Product.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Enable &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Disable &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Hide &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Default Filter</fullName>
                </value>
                <value>
                    <fullName>Optional Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>