force-app/main/default/objects/SBQQ__LookupData__c/fields/SBQQ__Value__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>